# ShellMate

./: .env  .gitignore  README.md  chat_manager.py  cmdexec.py  config.py  example-use.txt  example-use2.txt  example-use3.txt  extractcmd.py  main.py  pyproject.toml  raw_log.txt  shell.py  stream_handler.py  system_prompt.txt  test.py
src/: shellmate.py  stream_handler.py
src/shellmate/: .env.example  edit_env.py  shell.py  shellmate.py
src/shellmate.egg-info/: PKG-INFO  SOURCES.txt
test/shmate-0.1.0/: PKG-INFO  README.md  pyproject.toml
test/shmate-0.1.0/src/shellmate/: shellmate.py  stream_handler.py
