[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmate_davidl09"
version = "0.1.0"
description = "A command-line application integrating with OpenAI's API."
authors = [
    { name = "David Laeer", email = "davidlaeer@gmail.com" }
]
dependencies = [
    "openai",
    "python-dotenv"
]

[project.scripts]
shellmate = "shellmate.shellmate:main"

[project.urls]
Homepage = "https://github.com/davidl09/ShellMate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shellmate = ["system_prompt.txt", ".env"]

